--- a/veiculos-disponiveis.html
+++ b/veiculos-disponiveis.html
@@ -56,39 +56,86 @@
     <main>
         <section>
             <div class="container">
-                <h1>Veículos Disponíveis</h1>
                 <div id="div-categoria" class="row">
                     <div class="col s12">
-                        <form action="">
-                            <span>Categorias:</span>
+                        <h4>Categorias</h4>
+                        <form id="form-categoria" action="">
                             <label>
-                                <input type="checkbox" class="filled-in" />
+                                <input type="checkbox" class="filled-in">
                                 <span>Hatch</span>
                             </label>
                             <label>
-                                <input type="checkbox" class="filled-in" />
-                                <span>Sedan</span>
+                                <input type="checkbox" class="filled-in">
+                                <span>Sedãn</span>
                             </label>
                             <label>
-                                <input type="checkbox" class="filled-in" />
+                                <input type="checkbox" class="filled-in">
                                 <span>SUV</span>
                             </label>
                             <label>
-                                <input type="checkbox" class="filled-in" />
+                                <input type="checkbox" class="filled-in">
                                 <span>Pick-Ups</span>
                             </label>
                             <label>
-                                <input type="checkbox" class="filled-in" />
+                                <input type="checkbox" class="filled-in">
                                 <span>Furgões</span>
                             </label>
                             <label>
-                                <input type="checkbox" class="filled-in" />
+                                <input type="checkbox" class="filled-in">
                                 <span>Esportivos</span>
                             </label>
                         </form>
                     </div>
                 </div>
             </div>
+        </section>
+
+        <section>
+            <div class="container">
+                <div class="row">
+                    <div class="col s12 m6">
+                        <div class="card">
+                            <div class="card-image">
+                                <img src="assets/resources/img/carros/argo-1-0-drive-copy.jpg">
+                            </div>
+                            <div class="card-content">
+                                <span class="card-title">Fiat Argo</span>
+                                <p>Mussum Ipsum, cacilds vidis litro abertis. Quem num gosta di mim que vai caçá sua turmis! Viva Forevis aptent taciti sociosqu ad litora torquent. In elementis mé pra quem é amistosis quis leo. Manduma pindureta quium dia
+                                    nois paga.</p>
+                            </div>
+                            <div class="card-action">
+                                <p>Diária: R$95,00</p>
+                                <a href="#">Alugar</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col s12 m6">
+                        <div class="card">
+                            <div class="card-image">
+                                <img src="assets/resources/img/carros/argo-1-0-drive-copy.jpg">
+                            </div>
+                            <div class="card-content">
+                                <span class="card-title">Fiat Argo</span>
+                                <p>Mussum Ipsum, cacilds vidis litro abertis. Quem num gosta di mim que vai caçá sua turmis! Viva Forevis aptent taciti sociosqu ad litora torquent. In elementis mé pra quem é amistosis quis leo. Manduma pindureta quium dia
+                                    nois paga.</p>
+                            </div>
+                            <div class="card-action">
+                                <p>Diária: R$95,00</p>
+                                <a href="#">Alugar</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section>
+            <ul class="pagination">
+                <li class="disabled"><a href="#!"><i class="material-icons">chevron_left</i></a></li>
+                <li class="active"><a href="#!">1</a></li>
+                <li class="waves-effect"><a href="#!">2</a></li>
+                <li class="waves-effect"><a href="#!"><i class="material-icons">chevron_right</i></a></li>
+            </ul>
         </section>
     </main>
 
@@ -172,12 +219,6 @@
                         <p>Atualizar Dados do Cliente</p>
                     </a>
                 </div>
-                <div class="col s6 m2">
-                    <a href="">
-                        <img id="img-locacao" src="assets/resources/img/devolucao.png">
-                        <p>Remover Cliente</p>
-                    </a>
-                </div>
             </div>
         </div>
         <div class="modal-footer">
@@ -201,12 +242,6 @@
                         <p>Atualizar Dados do Usuário</p>
                     </a>
                 </div>
-                <div class="col s6 m2">
-                    <a href="">
-                        <img id="img-locacao" src="assets/resources/img/devolucao.png">
-                        <p>Remover Usuário</p>
-                    </a>
-                </div>
             </div>
         </div>
         <div class="modal-footer">
@@ -222,12 +257,6 @@
                     <a href="">
                         <img id="img-locacao" src="assets/resources/img/locacao.png">
                         <p>Adicionar Novo Veículo</p>
-                    </a>
-                </div>
-                <div class="col s6 m2">
-                    <a href="">
-                        <img id="img-locacao" src="assets/resources/img/devolucao.png">
-                        <p>Remover Veículo</p>
                     </a>
                 </div>
                 <div class="col s6 m2">
