--- a/pages/veiculos-disponiveis-pag2.html
+++ b/pages/veiculos-disponiveis-pag2.html
@@ -30,7 +30,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="../index.html" class="modal-trigger">
+                            <a href="index.html" class="modal-trigger">
                                 <i class="material-icons left">power_settings_new</i>Encerar Sessão
                             </a>
                         </li>
@@ -337,10 +337,10 @@
 
     <section>
         <ul class="pagination">
-            <li class="disabled"><a href="#!"><i class="material-icons">chevron_left</i></a></li>
-            <li class="active"><a href="#!">1</a></li>
-            <li class="waves-effect"><a href="veiculos-disponiveis-pag2.html">2</a></li>
-            <li class="waves-effect"><a href="veiculos-disponiveis-pag2.html"><i class="material-icons">chevron_right</i></a></li>
+            <li class="waves-effect"><a href="veiculos-disponiveis.html"><i class="material-icons">chevron_left</i></a></li>
+            <li class="waves-effect"><a href="veiculos-disponiveis.html">1</a></li>
+            <li class="active"><a href="#!">2</a></li>
+            <li class="disabled"><a href="#!"><i class="material-icons">chevron_right</i></a></li>
         </ul>
     </section>
 
